Fixed Translation issues with job roles

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -82,6 +82,7 @@
     "clearFilters": "Clear Filters",
     "applyFilters": "Apply Filters",
     "sortBy": "Sort By",
+    "sortOrder": "Sort Order",
     "datePosted": "Date Posted",
     "jobTitle": "Job Title",
     "capability": "Capability",
@@ -92,6 +93,10 @@
     "noResults": "No Results Found",
     "noResultsMessage": "No job roles match your criteria. Try adjusting your filters.",
     "viewDetails": "View Details",
+    "showing": "Showing",
+    "jobRolesSingle": "job role",
+    "jobRolesPlural": "job roles",
+    "found": "found",
     "location": "Location",
     "openPositions": "Open Positions",
     "status": "Status",
@@ -119,7 +124,10 @@
     "noMatchFilters": "No Jobs Match Your Filters",
     "noMatchMessage": "Try adjusting your search criteria or clearing some filters to see more results.",
     "clearAllFilters": "Clear All Filters",
-    "confirmDeleteJob": "Are you sure you want to delete"
+    "confirmDeleteJob": "Are you sure you want to delete",
+    "confirmDeletion": "Confirm Deletion",
+    "deleteWarning": "This action cannot be undone and will permanently remove this job role from the system.",
+    "deleteJobRole": "Delete Job Role"
   },
   "jobApplication": {
     "title": "Apply for Position",
@@ -189,6 +197,7 @@
     "allStatuses": "All Statuses",
     "capabilities": {
       "dataAnalytics": "Data & Analytics",
+      "workday": "Workday",
       "engineering": "Engineering",
       "product": "Product",
       "design": "Design",
@@ -263,5 +272,63 @@
       "loginSuccess": "Login successful! (This is a demo - no backend connection)",
       "signupSuccess": "Account created successfully! (This is a demo - no backend connection)"
     }
+  },
+  "jobTitles": {
+    "junior_software_engineer": "Junior Software Engineer",
+    "software_engineer": "Software Engineer",
+    "senior_software_engineer": "Senior Software Engineer",
+    "principal_engineer": "Principal Engineer",
+    "frontend_engineer_react__typescript": "Frontend Engineer (React & TypeScript)",
+    "backend_engineer": "Backend Engineer",
+    "full_stack_engineer": "Full Stack Engineer",
+    "junior_data_analyst": "Junior Data Analyst",
+    "data_analyst": "Data Analyst",
+    "senior_data_scientist": "Senior Data Scientist",
+    "principal_data_architect": "Principal Data Architect",
+    "data_engineer": "Data Engineer",
+    "senior_data_engineer": "Senior Data Engineer",
+    "machine_learning_engineer": "Machine Learning Engineer",
+    "junior_workday_consultant": "Junior Workday Consultant",
+    "workday_hcm_consultant": "Workday HCM Consultant",
+    "senior_workday_integration_consultant": "Senior Workday Integration Consultant",
+    "principal_workday_architect": "Principal Workday Architect",
+    "workday_financials_consultant": "Workday Financials Consultant",
+    "workday_payroll_consultant": "Workday Payroll Consultant",
+    "workday_project_manager": "Workday Project Manager",
+    "junior_product_manager": "Junior Product Manager",
+    "product_manager": "Product Manager",
+    "senior_product_manager": "Senior Product Manager",
+    "principal_product_manager": "Principal Product Manager",
+    "product_manager__data_platform": "Product Manager - Data Platform",
+    "junior_ux_designer": "Junior UX Designer",
+    "ux_designer": "UX Designer",
+    "senior_ux_designer": "Senior UX Designer",
+    "principal_design_lead": "Principal Design Lead",
+    "product_designer": "Product Designer",
+    "junior_platform_engineer": "Junior Platform Engineer",
+    "platform_engineer": "Platform Engineer",
+    "senior_platform_engineer": "Senior Platform Engineer",
+    "principal_platform_architect": "Principal Platform Architect",
+    "devops_engineer": "DevOps Engineer",
+    "junior_qa_engineer": "Junior QA Engineer",
+    "qa_engineer": "QA Engineer",
+    "senior_qa_engineer": "Senior QA Engineer",
+    "qa_engineer_test_automation": "QA Engineer (Test Automation)",
+    "principal_qa_architect": "Principal QA Architect",
+    "solutions_architect": "Solutions Architect",
+    "cloud_architect": "Cloud Architect",
+    "enterprise_architect": "Enterprise Architect",
+    "security_architect": "Security Architect",
+    "integration_architect": "Integration Architect",
+    "junior_business_analyst": "Junior Business Analyst",
+    "business_analyst": "Business Analyst",
+    "senior_business_analyst": "Senior Business Analyst",
+    "principal_business_analyst": "Principal Business Analyst",
+    "business_systems_analyst": "Business Systems Analyst",
+    "cybersecurity_engineer": "Cybersecurity Engineer",
+    "information_security_analyst": "Information Security Analyst",
+    "security_consultant": "Security Consultant",
+    "penetration_tester": "Penetration Tester",
+    "security_compliance_officer": "Security Compliance Officer"
   }
 }
