--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -82,6 +82,7 @@
     "clearFilters": "Limpiar Filtros",
     "applyFilters": "Aplicar Filtros",
     "sortBy": "Ordenar Por",
+    "sortOrder": "Orden",
     "datePosted": "Fecha de Publicación",
     "jobTitle": "Título del Trabajo",
     "capability": "Capacidad",
@@ -90,8 +91,12 @@
     "descending": "Descendente",
     "resultsFound": "Resultados Encontrados",
     "noResults": "No se Encontraron Resultados",
-    "noResultsMessage": "No hay roles de trabajo que coincidan con tus criterios. Intenta ajustar tus filtros.",
+    "noResultsMessage": "Ningún puesto de trabajo coincide con sus criterios. Intente ajustar sus filtros.",
     "viewDetails": "Ver Detalles",
+    "showing": "Mostrando",
+    "jobRolesSingle": "puesto de trabajo",
+    "jobRolesPlural": "puestos de trabajo",
+    "found": "encontrados",
     "location": "Ubicación",
     "openPositions": "Posiciones Abiertas",
     "status": "Estado",
@@ -119,7 +124,10 @@
     "noMatchFilters": "Ningún Trabajo Coincide con sus Filtros",
     "noMatchMessage": "Intente ajustar sus criterios de búsqueda o eliminar algunos filtros para ver más resultados.",
     "clearAllFilters": "Eliminar Todos los Filtros",
-    "confirmDeleteJob": "¿Estás seguro de que quieres eliminar"
+    "confirmDeleteJob": "¿Está seguro de que desea eliminar",
+    "confirmDeletion": "Confirmar Eliminación",
+    "deleteWarning": "Esta acción no se puede deshacer y eliminará permanentemente este puesto de trabajo del sistema.",
+    "deleteJobRole": "Eliminar Puesto de Trabajo"
   },
   "jobApplication": {
     "title": "Solicitar Puesto",
@@ -189,6 +197,7 @@
     "allStatuses": "Todos los Estados",
     "capabilities": {
       "dataAnalytics": "Datos y Análisis",
+      "workday": "Workday",
       "engineering": "Ingeniería",
       "product": "Producto",
       "design": "Diseño",
@@ -260,8 +269,66 @@
       "allFieldsRequired": "Por favor completa todos los campos requeridos"
     },
     "success": {
-      "loginSuccess": "¡Inicio de sesión exitoso! (Esta es una demostración - sin conexión al backend)",
-      "signupSuccess": "¡Cuenta creada exitosamente! (Esta es una demostración - sin conexión al backend)"
+      "loginSuccess": "¡Inicio de sesión exitoso! (Esta es una demostración: sin conexión al backend)",
+      "signupSuccess": "¡Cuenta creada exitosamente! (Esta es una demostración: sin conexión al backend)"
     }
+  },
+  "jobTitles": {
+    "junior_software_engineer": "Ingeniero de Software Junior",
+    "software_engineer": "Ingeniero de Software",
+    "senior_software_engineer": "Ingeniero de Software Senior",
+    "principal_engineer": "Ingeniero Principal",
+    "frontend_engineer_react__typescript": "Ingeniero Frontend (React y TypeScript)",
+    "backend_engineer": "Ingeniero Backend",
+    "full_stack_engineer": "Ingeniero Full Stack",
+    "junior_data_analyst": "Analista de Datos Junior",
+    "data_analyst": "Analista de Datos",
+    "senior_data_scientist": "Científico de Datos Senior",
+    "principal_data_architect": "Arquitecto de Datos Principal",
+    "data_engineer": "Ingeniero de Datos",
+    "senior_data_engineer": "Ingeniero de Datos Senior",
+    "machine_learning_engineer": "Ingeniero de Aprendizaje Automático",
+    "junior_workday_consultant": "Consultor Workday Junior",
+    "workday_hcm_consultant": "Consultor Workday HCM",
+    "senior_workday_integration_consultant": "Consultor de Integración Workday Senior",
+    "principal_workday_architect": "Arquitecto Workday Principal",
+    "workday_financials_consultant": "Consultor Workday Financials",
+    "workday_payroll_consultant": "Consultor de Nómina Workday",
+    "workday_project_manager": "Gerente de Proyectos Workday",
+    "junior_product_manager": "Gerente de Producto Junior",
+    "product_manager": "Gerente de Producto",
+    "senior_product_manager": "Gerente de Producto Senior",
+    "principal_product_manager": "Gerente de Producto Principal",
+    "product_manager__data_platform": "Gerente de Producto - Plataforma de Datos",
+    "junior_ux_designer": "Diseñador UX Junior",
+    "ux_designer": "Diseñador UX",
+    "senior_ux_designer": "Diseñador UX Senior",
+    "principal_design_lead": "Líder de Diseño Principal",
+    "product_designer": "Diseñador de Producto",
+    "junior_platform_engineer": "Ingeniero de Plataforma Junior",
+    "platform_engineer": "Ingeniero de Plataforma",
+    "senior_platform_engineer": "Ingeniero de Plataforma Senior",
+    "principal_platform_architect": "Arquitecto de Plataforma Principal",
+    "devops_engineer": "Ingeniero DevOps",
+    "junior_qa_engineer": "Ingeniero QA Junior",
+    "qa_engineer": "Ingeniero QA",
+    "senior_qa_engineer": "Ingeniero QA Senior",
+    "qa_engineer_test_automation": "Ingeniero QA (Automatización de Pruebas)",
+    "principal_qa_architect": "Arquitecto QA Principal",
+    "solutions_architect": "Arquitecto de Soluciones",
+    "cloud_architect": "Arquitecto de Nube",
+    "enterprise_architect": "Arquitecto Empresarial",
+    "security_architect": "Arquitecto de Seguridad",
+    "integration_architect": "Arquitecto de Integración",
+    "junior_business_analyst": "Analista de Negocio Junior",
+    "business_analyst": "Analista de Negocio",
+    "senior_business_analyst": "Analista de Negocio Senior",
+    "principal_business_analyst": "Analista de Negocio Principal",
+    "business_systems_analyst": "Analista de Sistemas de Negocio",
+    "cybersecurity_engineer": "Ingeniero de Ciberseguridad",
+    "information_security_analyst": "Analista de Seguridad de la Información",
+    "security_consultant": "Consultor de Seguridad",
+    "penetration_tester": "Probador de Penetración",
+    "security_compliance_officer": "Oficial de Cumplimiento de Seguridad"
   }
 }
