--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -82,6 +82,7 @@
     "clearFilters": "Effacer les Filtres",
     "applyFilters": "Appliquer les Filtres",
     "sortBy": "Trier Par",
+    "sortOrder": "Ordre",
     "datePosted": "Date de Publication",
     "jobTitle": "Titre du Poste",
     "capability": "Capacité",
@@ -91,7 +92,11 @@
     "resultsFound": "Résultats Trouvés",
     "noResults": "Aucun Résultat Trouvé",
     "noResultsMessage": "Aucun poste ne correspond à vos critères. Essayez d'ajuster vos filtres.",
-    "viewDetails": "Voir les Détails",
+    "viewDetails": "Voir Détails",
+    "showing": "Affichage",
+    "jobRolesSingle": "poste",
+    "jobRolesPlural": "postes",
+    "found": "trouvés",
     "location": "Emplacement",
     "openPositions": "Postes Ouverts",
     "status": "Statut",
@@ -119,7 +124,10 @@
     "noMatchFilters": "Aucun Poste ne Correspond à vos Filtres",
     "noMatchMessage": "Essayez d'ajuster vos critères de recherche ou de supprimer certains filtres pour voir plus de résultats.",
     "clearAllFilters": "Effacer Tous les Filtres",
-    "confirmDeleteJob": "Êtes-vous sûr de vouloir supprimer"
+    "confirmDeleteJob": "Êtes-vous sûr de vouloir supprimer",
+    "confirmDeletion": "Confirmer la Suppression",
+    "deleteWarning": "Cette action ne peut pas être annulée et supprimera définitivement ce poste du système.",
+    "deleteJobRole": "Supprimer le Poste"
   },
   "jobApplication": {
     "title": "Postuler pour le Poste",
@@ -189,6 +197,7 @@
     "allStatuses": "Tous les Statuts",
     "capabilities": {
       "dataAnalytics": "Données et Analyse",
+      "workday": "Workday",
       "engineering": "Ingénierie",
       "product": "Produit",
       "design": "Design",
@@ -260,8 +269,66 @@
       "allFieldsRequired": "Veuillez remplir tous les champs requis"
     },
     "success": {
-      "loginSuccess": "Connexion réussie ! (Ceci est une démonstration - aucune connexion backend)",
-      "signupSuccess": "Compte créé avec succès ! (Ceci est une démonstration - aucune connexion backend)"
+      "loginSuccess": "Connexion réussie ! (Ceci est une démo - aucune connexion backend)",
+      "signupSuccess": "Compte créé avec succès ! (Ceci est une démo - aucune connexion backend)"
     }
+  },
+  "jobTitles": {
+    "junior_software_engineer": "Ingénieur Logiciel Junior",
+    "software_engineer": "Ingénieur Logiciel",
+    "senior_software_engineer": "Ingénieur Logiciel Senior",
+    "principal_engineer": "Ingénieur Principal",
+    "frontend_engineer_react__typescript": "Ingénieur Frontend (React & TypeScript)",
+    "backend_engineer": "Ingénieur Backend",
+    "full_stack_engineer": "Ingénieur Full Stack",
+    "junior_data_analyst": "Analyste de Données Junior",
+    "data_analyst": "Analyste de Données",
+    "senior_data_scientist": "Scientifique des Données Senior",
+    "principal_data_architect": "Architecte de Données Principal",
+    "data_engineer": "Ingénieur de Données",
+    "senior_data_engineer": "Ingénieur de Données Senior",
+    "machine_learning_engineer": "Ingénieur en Apprentissage Automatique",
+    "junior_workday_consultant": "Consultant Workday Junior",
+    "workday_hcm_consultant": "Consultant Workday HCM",
+    "senior_workday_integration_consultant": "Consultant Intégration Workday Senior",
+    "principal_workday_architect": "Architecte Workday Principal",
+    "workday_financials_consultant": "Consultant Workday Financials",
+    "workday_payroll_consultant": "Consultant Paie Workday",
+    "workday_project_manager": "Chef de Projet Workday",
+    "junior_product_manager": "Chef de Produit Junior",
+    "product_manager": "Chef de Produit",
+    "senior_product_manager": "Chef de Produit Senior",
+    "principal_product_manager": "Chef de Produit Principal",
+    "product_manager__data_platform": "Chef de Produit - Plateforme de Données",
+    "junior_ux_designer": "Designer UX Junior",
+    "ux_designer": "Designer UX",
+    "senior_ux_designer": "Designer UX Senior",
+    "principal_design_lead": "Responsable Design Principal",
+    "product_designer": "Designer de Produit",
+    "junior_platform_engineer": "Ingénieur Plateforme Junior",
+    "platform_engineer": "Ingénieur Plateforme",
+    "senior_platform_engineer": "Ingénieur Plateforme Senior",
+    "principal_platform_architect": "Architecte Plateforme Principal",
+    "devops_engineer": "Ingénieur DevOps",
+    "junior_qa_engineer": "Ingénieur QA Junior",
+    "qa_engineer": "Ingénieur QA",
+    "senior_qa_engineer": "Ingénieur QA Senior",
+    "qa_engineer_test_automation": "Ingénieur QA (Automatisation des Tests)",
+    "principal_qa_architect": "Architecte QA Principal",
+    "solutions_architect": "Architecte Solutions",
+    "cloud_architect": "Architecte Cloud",
+    "enterprise_architect": "Architecte d'Entreprise",
+    "security_architect": "Architecte Sécurité",
+    "integration_architect": "Architecte Intégration",
+    "junior_business_analyst": "Analyste d'Affaires Junior",
+    "business_analyst": "Analyste d'Affaires",
+    "senior_business_analyst": "Analyste d'Affaires Senior",
+    "principal_business_analyst": "Analyste d'Affaires Principal",
+    "business_systems_analyst": "Analyste de Systèmes d'Affaires",
+    "cybersecurity_engineer": "Ingénieur Cybersécurité",
+    "information_security_analyst": "Analyste Sécurité de l'Information",
+    "security_consultant": "Consultant Sécurité",
+    "penetration_tester": "Testeur de Pénétration",
+    "security_compliance_officer": "Responsable Conformité Sécurité"
   }
 }
