--- a/locales/pl/translation.json
+++ b/locales/pl/translation.json
@@ -81,17 +81,22 @@
     "allStatuses": "Wszystkie statusy",
     "clearFilters": "Wyczyść filtry",
     "applyFilters": "Zastosuj filtry",
-    "sortBy": "Sortuj według",
-    "datePosted": "Data publikacji",
+    "sortBy": "Sortuj Według",
+    "sortOrder": "Kolejność",
+    "datePosted": "Data Publikacji",
     "jobTitle": "Tytuł stanowiska",
     "capability": "Możliwości",
     "band": "Poziom",
     "ascending": "Rosnąco",
     "descending": "Malejąco",
-    "resultsFound": "Znaleziono wyników",
-    "noResults": "Nie znaleziono wyników",
-    "noResultsMessage": "Nie znaleziono stanowisk odpowiadających Twoim kryteriom. Spróbuj dostosować filtry.",
-    "viewDetails": "Zobacz szczegóły",
+    "resultsFound": "Znalezione Wyniki",
+    "noResults": "Brak Wyników",
+    "noResultsMessage": "Żadne stanowiska nie spełniają Twoich kryteriów. Spróbuj dostosować filtry.",
+    "viewDetails": "Zobacz Szczegóły",
+    "showing": "Pokazuje",
+    "jobRolesSingle": "stanowisko",
+    "jobRolesPlural": "stanowiska",
+    "found": "znaleziono",
     "location": "Lokalizacja",
     "openPositions": "Otwarte stanowiska",
     "status": "Status",
@@ -119,7 +124,10 @@
     "noMatchFilters": "Żadne Stanowiska nie Pasują do Twoich Filtrów",
     "noMatchMessage": "Spróbuj dostosować kryteria wyszukiwania lub wyczyścić niektóre filtry, aby zobaczyć więcej wyników.",
     "clearAllFilters": "Wyczyść Wszystkie Filtry",
-    "confirmDeleteJob": "Czy na pewno chcesz usunąć"
+    "confirmDeleteJob": "Czy na pewno chcesz usunąć",
+    "confirmDeletion": "Potwierdź Usunięcie",
+    "deleteWarning": "Ta akcja nie może zostać cofnięta i trwale usunie to stanowisko z systemu.",
+    "deleteJobRole": "Usuń Stanowisko"
   },
   "jobApplication": {
     "title": "Aplikuj na Stanowisko",
@@ -189,6 +197,7 @@
     "allStatuses": "Wszystkie Statusy",
     "capabilities": {
       "dataAnalytics": "Dane i Analityka",
+      "workday": "Workday",
       "engineering": "Inżynieria",
       "product": "Produkt",
       "design": "Projektowanie",
@@ -263,5 +272,63 @@
       "loginSuccess": "Logowanie pomyślne! (To jest demo - brak połączenia z backendem)",
       "signupSuccess": "Konto utworzone pomyślnie! (To jest demo - brak połączenia z backendem)"
     }
+  },
+  "jobTitles": {
+    "junior_software_engineer": "Młodszy Inżynier Oprogramowania",
+    "software_engineer": "Inżynier Oprogramowania",
+    "senior_software_engineer": "Starszy Inżynier Oprogramowania",
+    "principal_engineer": "Główny Inżynier",
+    "frontend_engineer_react__typescript": "Inżynier Frontend (React i TypeScript)",
+    "backend_engineer": "Inżynier Backend",
+    "full_stack_engineer": "Inżynier Full Stack",
+    "junior_data_analyst": "Młodszy Analityk Danych",
+    "data_analyst": "Analityk Danych",
+    "senior_data_scientist": "Starszy Analityk Danych",
+    "principal_data_architect": "Główny Architekt Danych",
+    "data_engineer": "Inżynier Danych",
+    "senior_data_engineer": "Starszy Inżynier Danych",
+    "machine_learning_engineer": "Inżynier Uczenia Maszynowego",
+    "junior_workday_consultant": "Młodszy Konsultant Workday",
+    "workday_hcm_consultant": "Konsultant Workday HCM",
+    "senior_workday_integration_consultant": "Starszy Konsultant Integracji Workday",
+    "principal_workday_architect": "Główny Architekt Workday",
+    "workday_financials_consultant": "Konsultant Workday Financials",
+    "workday_payroll_consultant": "Konsultant Płac Workday",
+    "workday_project_manager": "Kierownik Projektu Workday",
+    "junior_product_manager": "Młodszy Kierownik Produktu",
+    "product_manager": "Kierownik Produktu",
+    "senior_product_manager": "Starszy Kierownik Produktu",
+    "principal_product_manager": "Główny Kierownik Produktu",
+    "product_manager__data_platform": "Kierownik Produktu - Platforma Danych",
+    "junior_ux_designer": "Młodszy Projektant UX",
+    "ux_designer": "Projektant UX",
+    "senior_ux_designer": "Starszy Projektant UX",
+    "principal_design_lead": "Główny Lider Projektowania",
+    "product_designer": "Projektant Produktu",
+    "junior_platform_engineer": "Młodszy Inżynier Platformy",
+    "platform_engineer": "Inżynier Platformy",
+    "senior_platform_engineer": "Starszy Inżynier Platformy",
+    "principal_platform_architect": "Główny Architekt Platformy",
+    "devops_engineer": "Inżynier DevOps",
+    "junior_qa_engineer": "Młodszy Inżynier QA",
+    "qa_engineer": "Inżynier QA",
+    "senior_qa_engineer": "Starszy Inżynier QA",
+    "qa_engineer_test_automation": "Inżynier QA (Automatyzacja Testów)",
+    "principal_qa_architect": "Główny Architekt QA",
+    "solutions_architect": "Architekt Rozwiązań",
+    "cloud_architect": "Architekt Chmury",
+    "enterprise_architect": "Architekt Korporacyjny",
+    "security_architect": "Architekt Bezpieczeństwa",
+    "integration_architect": "Architekt Integracji",
+    "junior_business_analyst": "Młodszy Analityk Biznesowy",
+    "business_analyst": "Analityk Biznesowy",
+    "senior_business_analyst": "Starszy Analityk Biznesowy",
+    "principal_business_analyst": "Główny Analityk Biznesowy",
+    "business_systems_analyst": "Analityk Systemów Biznesowych",
+    "cybersecurity_engineer": "Inżynier Cyberbezpieczeństwa",
+    "information_security_analyst": "Analityk Bezpieczeństwa Informacji",
+    "security_consultant": "Konsultant Bezpieczeństwa",
+    "penetration_tester": "Tester Penetracyjny",
+    "security_compliance_officer": "Specjalista ds. Zgodności Bezpieczeństwa"
   }
 }
