--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -127,7 +127,17 @@
     "confirmDeleteJob": "¿Está seguro de que desea eliminar",
     "confirmDeletion": "Confirmar Eliminación",
     "deleteWarning": "Esta acción no se puede deshacer y eliminará permanentemente este puesto de trabajo del sistema.",
-    "deleteJobRole": "Eliminar Puesto de Trabajo"
+    "deleteJobRole": "Eliminar Puesto de Trabajo",
+    "jobDescription": "Descripción del Trabajo",
+    "keyResponsibilities": "Responsabilidades Clave",
+    "quickInformation": "Información Rápida",
+    "actions": "Acciones",
+    "positionClosed": "Esta posición está actualmente cerrada para solicitudes.",
+    "backToJobList": "Volver a la Lista de Trabajos",
+    "shareThisJob": "Compartir este Trabajo",
+    "copyLink": "Copiar Enlace",
+    "shareViaEmail": "Compartir por Correo Electrónico",
+    "print": "Imprimir"
   },
   "jobApplication": {
     "title": "Solicitar Puesto",
@@ -274,6 +284,7 @@
     }
   },
   "jobTitles": {
+    "urgent_infrastructure_engineer": "Urgente: Ingeniero de Infraestructura",
     "junior_software_engineer": "Ingeniero de Software Junior",
     "software_engineer": "Ingeniero de Software",
     "senior_software_engineer": "Ingeniero de Software Senior",
@@ -330,5 +341,31 @@
     "security_consultant": "Consultor de Seguridad",
     "penetration_tester": "Probador de Penetración",
     "security_compliance_officer": "Oficial de Cumplimiento de Seguridad"
+  },
+  "jobDescriptions": {
+    "urgent_infrastructure_engineer": "Necesidad inmediata de ingeniero de infraestructura.",
+    "senior_software_engineer": "Liderar el desarrollo de soluciones de software complejas y orientar a desarrolladores junior",
+    "product_manager": "Impulsar la estrategia del producto y trabajar con equipos multifuncionales para ofrecer experiencias excepcionales al usuario",
+    "data_scientist": "Analizar conjuntos de datos complejos para obtener información y construir modelos predictivos",
+    "ux_designer": "Crear experiencias de usuario intuitivas y atractivas para productos digitales",
+    "devops_engineer": "Mantener y mejorar la infraestructura, pipelines CI/CD y procesos de implementación",
+    "frontend_developer": "Construir interfaces de usuario responsivas e interactivas utilizando tecnologías web modernas",
+    "qa_engineer": "Garantizar la calidad del software mediante estrategias de prueba integrales y automatización",
+    "solutions_architect": "Diseñar soluciones técnicas a nivel empresarial y guiar estrategias de implementación",
+    "business_analyst": "Conectar los requisitos empresariales con soluciones técnicas y mejoras de procesos",
+    "cybersecurity_specialist": "Proteger los activos organizacionales mediante monitoreo de seguridad y análisis de amenazas"
+  },
+  "jobResponsibilities": {
+    "urgent_infrastructure_engineer": "Gestión de infraestructura, planificación de capacidad, seguridad",
+    "senior_software_engineer": "Diseñar e implementar sistemas de software escalables, revisión de código, liderazgo técnico, mentoría a miembros del equipo",
+    "product_manager": "Planificación de la hoja de ruta del producto, gestión de partes interesadas, investigación de usuarios, priorización de características, análisis de mercado",
+    "data_scientist": "Análisis de datos, desarrollo de modelos de aprendizaje automático, análisis estadístico, visualización de datos, informes",
+    "ux_designer": "Investigación de usuarios, wireframing, prototipado, pruebas de usabilidad, sistemas de diseño, colaboración con desarrolladores",
+    "devops_engineer": "Gestión de infraestructura, automatización, monitoreo, implementación de seguridad, gestión de servicios en la nube",
+    "frontend_developer": "Desarrollo React/Vue, diseño responsivo, optimización del rendimiento, pruebas, implementación de accesibilidad",
+    "qa_engineer": "Planificación de pruebas, pruebas automatizadas, pruebas manuales, informes de errores, procesos de aseguramiento de calidad",
+    "solutions_architect": "Diseño de arquitectura, documentación técnica, consultoría con partes interesadas, evaluación de tecnología",
+    "business_analyst": "Recopilación de requisitos, análisis de procesos, gestión de partes interesadas, documentación, diseño de soluciones",
+    "cybersecurity_specialist": "Monitoreo de seguridad, evaluación de vulnerabilidades, respuesta a incidentes, desarrollo de políticas de seguridad"
   }
 }
