--- a/locales/pl/translation.json
+++ b/locales/pl/translation.json
@@ -127,7 +127,17 @@
     "confirmDeleteJob": "Czy na pewno chcesz usunąć",
     "confirmDeletion": "Potwierdź Usunięcie",
     "deleteWarning": "Ta akcja nie może zostać cofnięta i trwale usunie to stanowisko z systemu.",
-    "deleteJobRole": "Usuń Stanowisko"
+    "deleteJobRole": "Usuń Stanowisko",
+    "jobDescription": "Opis Stanowiska",
+    "keyResponsibilities": "Kluczowe Obowiązki",
+    "quickInformation": "Szybka Informacja",
+    "actions": "Akcje",
+    "positionClosed": "To stanowisko jest obecnie zamknięte dla aplikacji.",
+    "backToJobList": "Powrót do Listy Stanowisk",
+    "shareThisJob": "Udostępnij to Stanowisko",
+    "copyLink": "Kopiuj Link",
+    "shareViaEmail": "Udostępnij przez E-mail",
+    "print": "Drukuj"
   },
   "jobApplication": {
     "title": "Aplikuj na Stanowisko",
@@ -274,6 +284,7 @@
     }
   },
   "jobTitles": {
+    "urgent_infrastructure_engineer": "Pilne: Inżynier Infrastruktury",
     "junior_software_engineer": "Młodszy Inżynier Oprogramowania",
     "software_engineer": "Inżynier Oprogramowania",
     "senior_software_engineer": "Starszy Inżynier Oprogramowania",
@@ -330,5 +341,31 @@
     "security_consultant": "Konsultant Bezpieczeństwa",
     "penetration_tester": "Tester Penetracyjny",
     "security_compliance_officer": "Specjalista ds. Zgodności Bezpieczeństwa"
+  },
+  "jobDescriptions": {
+    "urgent_infrastructure_engineer": "Pilna potrzeba inżyniera infrastruktury.",
+    "senior_software_engineer": "Kierowanie rozwojem złożonych rozwiązań programistycznych i mentoring młodszych programistów",
+    "product_manager": "Prowadzenie strategii produktowej i praca z zespołami wielofunkcyjnymi w celu dostarczania wyjątkowych doświadczeń użytkownika",
+    "data_scientist": "Analiza złożonych zbiorów danych w celu wyciągania wniosków i tworzenia modeli predykcyjnych",
+    "ux_designer": "Tworzenie intuicyjnych i angażujących doświadczeń użytkownika dla produktów cyfrowych",
+    "devops_engineer": "Utrzymanie i ulepszanie infrastruktury, potoków CI/CD oraz procesów wdrażania",
+    "frontend_developer": "Tworzenie responsywnych i interaktywnych interfejsów użytkownika przy użyciu nowoczesnych technologii webowych",
+    "qa_engineer": "Zapewnianie jakości oprogramowania poprzez kompleksowe strategie testowania i automatyzację",
+    "solutions_architect": "Projektowanie rozwiązań technicznych na poziomie przedsiębiorstwa i prowadzenie strategii wdrożeniowych",
+    "business_analyst": "Łączenie wymagań biznesowych z rozwiązaniami technicznymi i ulepszeniami procesów",
+    "cybersecurity_specialist": "Ochrona zasobów organizacyjnych poprzez monitorowanie bezpieczeństwa i analizę zagrożeń"
+  },
+  "jobResponsibilities": {
+    "urgent_infrastructure_engineer": "Zarządzanie infrastrukturą, planowanie wydajności, bezpieczeństwo",
+    "senior_software_engineer": "Projektowanie i wdrażanie skalowalnych systemów oprogramowania, przeglądy kodu, przywództwo techniczne, mentoring członków zespołu",
+    "product_manager": "Planowanie mapy drogowej produktu, zarządzanie interesariuszami, badania użytkowników, priorytetyzacja funkcji, analiza rynku",
+    "data_scientist": "Analiza danych, rozwój modeli uczenia maszynowego, analiza statystyczna, wizualizacja danych, raportowanie",
+    "ux_designer": "Badania użytkowników, wireframing, prototypowanie, testy użyteczności, systemy projektowe, współpraca z programistami",
+    "devops_engineer": "Zarządzanie infrastrukturą, automatyzacja, monitorowanie, wdrażanie bezpieczeństwa, zarządzanie usługami chmurowymi",
+    "frontend_developer": "Rozwój React/Vue, projektowanie responsywne, optymalizacja wydajności, testowanie, wdrażanie dostępności",
+    "qa_engineer": "Planowanie testów, testowanie automatyczne, testowanie manualne, raportowanie błędów, procesy zapewnienia jakości",
+    "solutions_architect": "Projektowanie architektury, dokumentacja techniczna, konsultacje z interesariuszami, ocena technologii",
+    "business_analyst": "Zbieranie wymagań, analiza procesów, zarządzanie interesariuszami, dokumentacja, projektowanie rozwiązań",
+    "cybersecurity_specialist": "Monitorowanie bezpieczeństwa, ocena podatności, reagowanie na incydenty, rozwój polityk bezpieczeństwa"
   }
 }
